--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
     <import file="build-dependencies.xml"/>
 
     <taskdef classname="phing.tasks.ext.d51PearPkg2Task" name="d51pearpkg2" />
-    <taskdef classname="NativePhpunitTask" classpath="./tools/" name="nativephpunit" />
+    <taskdef classname="NativePhpunitTask" classpath="./tests/" name="nativephpunit" />
 
     <property file="build.properties" />
     
