--- a/build.xml
+++ b/build.xml
@@ -93,7 +93,7 @@
         <exec command="mv ${build.dir}/doctrine-dbal/Doctrine/DBAL/Version2.php ${build.dir}/doctrine-dbal/Doctrine/DBAL/Version.php" passthru="true" />
     </target>
 
-    <target name="build" depends="build-dbal"/>
+    <target name="build" depends="test,build-dbal"/>
 
     <!--
         Runs the full test suite.
@@ -101,17 +101,23 @@
     <target name="test" depends="prepare">
         <if><equals arg1="${test.phpunit_generate_coverage}" arg2="1" />
             <then>
-                <property name="test.phpunit_coverage_file" value="${build.dir}/logs/clover.xml" />
+                <property name="test.phpunit_coverage_option" value="--coverage-clover ${build.dir}/logs/clover.xml" />
             </then>
             <else>
-                <property name="test.phpunit_coverage_file" value="false" />
+                <property name="test.phpunit_coverage_option" value="" />
             </else>
         </if>
 
-        <nativephpunit
-            testfile="./tests/Doctrine/Tests/AllTests.php" junitlogfile="${build.dir}/logs/testsuites.xml"
-            testdirectory="./tests"  coverageclover="${test.phpunit_coverage_file}" configuration="${test.phpunit_configuration_file}"
-        />
+        <if><equals arg1="${test.phpunit_configuration_file}" arg2="" />
+            <then>
+                <property name="test.phpunit_configuration_option" value="" />
+            </then>
+            <else>
+                <property name="test.phpunit_configuration_option" value="--configuration ${test.phpunit_configuration_file}" />
+            </else>
+        </if>
+
+        <exec command="phpunit ${test.phpunit_configuration_option} ${test.phpunit_coverage_option} --log-junit ../${build.dir}/logs/testsuites.xml Doctrine/Tests/AllTests.php" dir="./tests" />
         <phpunitreport infile="${build.dir}/logs/testsuites.xml" format="frames" todir="${report.dir}/tests" />
 
         <tstamp/>
@@ -166,4 +172,6 @@
             </fileset>
         </tar>
     </target>
+
+    <!-- Distribute Package using Pirum -->
 </project>
