--- a/build.xml
+++ b/build.xml
@@ -154,10 +154,13 @@
            <dependencies>
                <php minimum_version="5.3.2" />
                <pear minimum_version="1.6.0" recommended_version="1.6.1" />
-               <package name="DoctrineCommon" channel="pear.doctrine-project.org" minimum_version="2.0.0BETA4" />
+               <package name="DoctrineCommon" channel="pear.doctrine-project.org" minimum_version="${dependencies.common}" />
+               <!-- Doctrine Symfony Console PEAR package is generated in ORM build.xml process -->
+               <package name="DoctrineSymfonyConsole" channel="pear.doctrine-project.org" minimum_version="${dependencies.sfconsole}" />
            </dependencies>
            <dirroles key="bin">script</dirroles>
            <ignore>Doctrine/Common/</ignore>
+           <ignore>Doctrine/Symfony/</ignore>
            <release>
                 <install as="doctrine-dbal" name="bin/doctrine-dbal" />
                 <install as="doctrine-dbal.php" name="bin/doctrine-dbal.php" />
